test/bad/functions/call03.px

func f(): Void def
    return

f(false)
